--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ notebook==7.5.3
 notebook_shim==0.2.4
 numpy==2.4.2
 packaging==26.0
+pandas==3.0.1
 pandocfilters==1.5.1
 parso==0.8.6
 pillow==12.1.1
